UserInfo tab UI elements

--- a/milestone3/milestone1/MainWindow.xaml
+++ b/milestone3/milestone1/MainWindow.xaml
@@ -14,7 +14,44 @@
         </Grid.ColumnDefinitions>
         <TabControl HorizontalAlignment="Left" Height="460" VerticalAlignment="Top" Width="961" Grid.ColumnSpan="3" Margin="0,0,-3.4,0">
             <TabItem x:Name="userInfoTab" Header="User Information" RenderTransformOrigin="-0.672,1.079">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <GroupBox x:Name="SetCurrentUserBox" Header="Set Current User" HorizontalAlignment="Left" Height="117" Margin="7,10,0,0" VerticalAlignment="Top" Width="263">
+                        <Grid HorizontalAlignment="Left" Height="107" Margin="10,0,-2.6,-12.6" VerticalAlignment="Top" Width="243" RenderTransformOrigin="0.964,-0.204">
+                            <TextBox x:Name="CurrentUserTxt" HorizontalAlignment="Left" Height="22" Margin="0,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" RenderTransformOrigin="0.347,-0.178"/>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox x:Name="UserInfoBox" Header="User Information" HorizontalAlignment="Left" Height="256" Margin="11,132,0,0" VerticalAlignment="Top" Width="259">
+                        <Grid HorizontalAlignment="Left" Height="264" Margin="0,-18,-12.6,-22" VerticalAlignment="Top" Width="259">
+                            <Label x:Name="NameLabel" Content="Name:" HorizontalAlignment="Left" Height="27" Margin="10,28,0,0" VerticalAlignment="Top" Width="55"/>
+                            <Label x:Name="StarsLabel" Content="Stars:" HorizontalAlignment="Left" Height="27" Margin="10,60,0,0" VerticalAlignment="Top" Width="55"/>
+                            <Label x:Name="YelpSinceLabel" Content="Yelping" HorizontalAlignment="Left" Height="27" Margin="10,92,0,0" VerticalAlignment="Top" Width="55"/>
+                            <Label x:Name="YelpSince2Label" Content="Since." HorizontalAlignment="Left" Height="27" Margin="10,106,0,0" VerticalAlignment="Top" Width="55"/>
+                            <TextBox x:Name="NameTextBox" HorizontalAlignment="Left" Height="27" Margin="65,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="166" IsReadOnly="True"/>
+                            <TextBox x:Name="StarsTextBox" HorizontalAlignment="Left" Height="27" Margin="65,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="57" IsReadOnly="True"/>
+                            <Label x:Name="FansLabel" Content="Fans:" HorizontalAlignment="Left" Height="27" Margin="127,60,0,0" VerticalAlignment="Top" Width="45"/>
+                            <TextBox x:Name="FansTextBox" HorizontalAlignment="Left" Height="27" Margin="177,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="54" IsReadOnly="True"/>
+                            <TextBox x:Name="YelpingSinceTextBox" HorizontalAlignment="Left" Height="27" Margin="65,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="166" IsReadOnly="True"/>
+                            <Label x:Name="VotesLabel" Content="Votes:" HorizontalAlignment="Left" Height="28" Margin="10,138,0,0" VerticalAlignment="Top" Width="55"/>
+                            <Label x:Name="FunnyLabel" Content="funny:" HorizontalAlignment="Left" Height="28" Margin="65,138,0,0" VerticalAlignment="Top" Width="39"/>
+                            <Label x:Name="CoolLabel" Content="cool:" HorizontalAlignment="Left" Height="28" Margin="127,138,0,0" VerticalAlignment="Top" Width="45"/>
+                            <Label x:Name="UsefulLabel" Content="useful:" HorizontalAlignment="Left" Height="28" Margin="177,138,0,0" VerticalAlignment="Top" Width="54"/>
+                            <TextBox x:Name="FunnyTextBox" HorizontalAlignment="Left" Height="23" Margin="65,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="39" IsReadOnly="True"/>
+                            <TextBox x:Name="CoolTextBox" HorizontalAlignment="Left" Height="23" Margin="127,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="45" IsReadOnly="True"/>
+                            <TextBox x:Name="UsefulTextBox" HorizontalAlignment="Left" Height="23" Margin="177,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="54" IsReadOnly="True"/>
+                            <Label x:Name="LocationLabel" Content="Location:" HorizontalAlignment="Left" Height="25" Margin="10,189,0,0" VerticalAlignment="Top" Width="55"/>
+                            <Label x:Name="LatLabel" Content="lat" HorizontalAlignment="Left" Height="22" Margin="29,204,0,0" VerticalAlignment="Top" Width="36"/>
+                            <Label x:Name="LongLabel" Content="long" HorizontalAlignment="Left" Height="26" Margin="29,219,0,0" VerticalAlignment="Top" Width="36"/>
+                            <TextBox x:Name="LatTextBox" HorizontalAlignment="Left" Height="20" Margin="70,204,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="102" IsReadOnly="True"/>
+                            <TextBox x:Name="LongTextBox" HorizontalAlignment="Left" Height="20" Margin="70,231,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="102" IsReadOnly="True"/>
+                            <Button x:Name="EditLocationBtn" Content="Edit" HorizontalAlignment="Left" Height="22" Margin="177,204,0,0" VerticalAlignment="Top" Width="72"/>
+                            <Button x:Name="UpdateLocationBtn" Content="Update" HorizontalAlignment="Left" Height="22" Margin="177,231,0,0" VerticalAlignment="Top" Width="72" IsEnabled="False"/>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox x:Name="FavBusinessBox" Header="Favorite Businesses" HorizontalAlignment="Left" Height="134" Margin="275,254,0,0" VerticalAlignment="Top" Width="679" RenderTransformOrigin="0.521,0.482"/>
+                    <GroupBox x:Name="FriendsBox" Header="Friends" HorizontalAlignment="Left" Height="239" Margin="275,10,0,0" VerticalAlignment="Top" Width="260"/>
+                    <GroupBox x:Name="FriendsReviewsBox" Header="What are my friends reviewing?" HorizontalAlignment="Left" Height="239" Margin="540,10,0,0" VerticalAlignment="Top" Width="404"/>
+                    <Button x:Name="RemoveFavBtn" Content="Remove from Favorites" HorizontalAlignment="Left" Height="22" Margin="11,400,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.626,0.616"/>
+                </Grid>
             </TabItem>
             <TabItem x:Name="businessSearchTab" Header="Business Search">
                 <Grid Background="#FFE5E5E5" Margin="0,-3,-2.2,-8.4">
